# coder-dojo-worksheets

./: .gitignore  README.md
helena_scratch/: Helena coderdojo birthday card.pub
python/: silly_sentences.py
python/common/: sheet.css
python/game_1/: alien.py  game_background.xcf  game_base_1.py  game_base_2.py  game_base_3.py  game_plan.txt  game_playsound_base_4.py  game_playsound_base_pure_pyglet.py
python/making_sheets/: README.md  sheet_template.md
python/menace_noughts_and_crosses/: tictactoe.md
python/pygame_invaders/: .gitignore  alien.py  config.py  invaders.md  invaders_1.py  invaders_10.py  invaders_10b.py  invaders_11.py  invaders_2.py  invaders_3.py  invaders_3b.py  invaders_4.py  invaders_4b.py  invaders_5.py  invaders_5b.py  invaders_6.py  invaders_7.py  invaders_7b.py  invaders_8.py  invaders_8b.py  invaders_9.py  invaders_9b.py  main.py  player.py  pyproject.toml  requirements.txt  weapons.py
python/pygame_invaders/complete/: main.py  player.py
python/pygame_invaders/step_1/: config.py  main.py
python/pygame_invaders/step_2/: config.py  main.py  weapons.py
python/pygame_invaders/step_3/: alien.py  main.py  weapons.py
python/pygame_invaders/step_4/: alien.py  main.py  player.py
python/pygame_invaders/step_5/: alien.py  explosion.py  main.py  player.py
python/pygame_stars/: pygame_stars.md  pygame_stars.py  pygame_stars_1.py  pygame_stars_2.py  pyproject.toml
python/snowflake_generator/: Making a SnowFlake.md  snowflake_generator.py  stage_1.py  stage_10_stars.py  stage_2.py  stage_3.py  stage_4.py  stage_5.py  stage_6.py  (+3 more)
(+26 files in other folders)
